[gd_scene load_steps=27 format=2]

[ext_resource path="res://SkillTree/SkillTree.gd" type="Script" id=1]
[ext_resource path="res://SkillTree/AutumnPixelExtraWideRegular-6YPlv.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://buttonskill/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://SkillTree/pieces label Menu.gd" type="Script" id=4]
[ext_resource path="res://Heart.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 416, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 448, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 480, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 512, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 544, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="SkillTree" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="BoxContainer" type="VBoxContainer" parent="."]
margin_left = -254.0
margin_top = -118.0
margin_right = 193.0
margin_bottom = 84.0
rect_min_size = Vector2( 100, 100 )
rect_scale = Vector2( 1, 2 )

[node name="Start" type="Button" parent="BoxContainer"]
margin_right = 447.0
margin_bottom = 23.0
focus_neighbour_top = NodePath("../Quit")
text = "Start"
icon_align = 1

[node name="Quit" type="Button" parent="BoxContainer"]
margin_top = 27.0
margin_right = 447.0
margin_bottom = 50.0
focus_neighbour_bottom = NodePath("../Start")
text = "Quit"
icon_align = 1

[node name="Skills" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Possibilities" type="Control" parent="Skills"]
margin_right = 208.0

[node name="saut" parent="Skills/Possibilities" instance=ExtResource( 3 )]
margin_left = -358.0
margin_top = -222.0
margin_right = -313.0
margin_bottom = -174.0
skill = 1
active = true

[node name="double" parent="Skills/Possibilities" instance=ExtResource( 3 )]
margin_left = -455.0
margin_top = -101.0
margin_right = -415.0
margin_bottom = -61.0
skill = 2

[node name="para" parent="Skills/Possibilities" instance=ExtResource( 3 )]
margin_left = -293.0
margin_top = -98.0
margin_right = -253.0
margin_bottom = -58.0
skill = 3

[node name="oxy" parent="Skills/Possibilities" instance=ExtResource( 3 )]
margin_left = 342.0
margin_top = -98.0
margin_right = 382.0
margin_bottom = -58.0
skill = 5

[node name="dash" parent="Skills/Possibilities" instance=ExtResource( 3 )]
margin_left = 188.0
margin_top = -102.0
margin_right = 228.0
margin_bottom = -62.0
skill = 4

[node name="nage" parent="Skills/Possibilities" instance=ExtResource( 3 )]
margin_left = 271.0
margin_top = -237.0
margin_right = 311.0
margin_bottom = -197.0
active = true

[node name="Skillpoints" type="Label" parent="Skills"]
anchor_left = 3.059
anchor_top = -2.275
anchor_right = 3.059
anchor_bottom = -2.275
margin_left = -228.36
margin_top = -39.0
margin_right = -20.36
margin_bottom = 77.0
text = "Skill points:"

[node name="number of skill point" type="Label" parent="Skills/Skillpoints"]
margin_left = 216.0
margin_top = 1.0
margin_right = 424.0
margin_bottom = 18.0
text = "2"

[node name="Text" type="Control" parent="."]
margin_left = -550.0
margin_top = -278.0
margin_right = 4.0
margin_bottom = -48.0

[node name="Collect all the coins!" type="Label" parent="Text"]
margin_left = 273.0
margin_top = 80.0
margin_right = 773.0
margin_bottom = 177.0
text = "Collect all the coins!"
align = 1

[node name="coins so far!" type="Label" parent="Text"]
margin_left = 543.0
margin_top = 345.0
margin_right = 751.0
margin_bottom = 362.0
text = "coins so far!"

[node name="You collected" type="Label" parent="Text"]
margin_left = 296.0
margin_top = 345.0
margin_right = 504.0
margin_bottom = 362.0
text = "You collected"

[node name="number of coins" type="Label" parent="Text"]
margin_left = 516.0
margin_top = 346.0
margin_right = 556.0
margin_bottom = 363.0
text = "0"
script = ExtResource( 4 )

[node name="Victory" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Heart" type="AnimatedSprite" parent="Victory"]
position = Vector2( -27, 46 )
scale = Vector2( 2.0625, 1.875 )
frames = SubResource( 21 )
frame = 4
playing = true

[node name="ThanksCr√©dits" type="Label" parent="Victory"]
margin_left = -164.0
margin_top = 104.0
margin_right = 140.0
margin_bottom = 141.0
text = "THANKS FOR PLAYING!
Virginie and Pierre"

[node name="Congratulation!" type="Label" parent="Victory"]
margin_left = -307.0
margin_top = -204.0
margin_right = 221.0
margin_bottom = -167.0
text = "Congratulation!
You have collected all the coins!"
align = 1

[connection signal="pressed" from="BoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="BoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="dimskill" from="Skills/Possibilities/saut" to="." method="_on_Control_dimskill"]
[connection signal="sautpris" from="Skills/Possibilities/saut" to="." method="_on_saut_sautpris"]
[connection signal="dimskill" from="Skills/Possibilities/double" to="." method="_on_Control_dimskill"]
[connection signal="dimskill" from="Skills/Possibilities/para" to="." method="_on_Control_dimskill"]
[connection signal="dimskill" from="Skills/Possibilities/oxy" to="." method="_on_Control_dimskill"]
[connection signal="dimskill" from="Skills/Possibilities/dash" to="." method="_on_Control_dimskill"]
[connection signal="dimskill" from="Skills/Possibilities/nage" to="." method="_on_Control_dimskill"]
[connection signal="nagepris" from="Skills/Possibilities/nage" to="." method="_on_nage_nagepris"]
